tests/snapshots/examples_fixtures/effects__failing__03_reserved_internal_primop.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/effects/failing/03_reserved_internal_primop.flx
== compile ==
failed (compile)
== diagnostics ==
error[E034]: Reserved Primop Name

`__primop_println` is reserved for compiler-synthesized effect handlers.

  examples/effects/failing/03_reserved_internal_primop.flx:4:5
  |
4 |     __primop_println("not user-callable")
  |     ^^^^^^^^^^^^^^^^
  |     ---------------- reserved internal primop call

Hint:
  Call the public effectful operation instead.
== stdout ==
<not executed>
